@startuml
title Database Schema (ERD)
caption Diagram generated from DB incremental scripts
footer db/migration/*.sql -> DB -> dump to DB.sql -> converted to DB.puml
hide circle
hide empty members
skinparam linetype ortho

entity "owners" as owners {
{field} id : int <<PK>>
{field} first_name : text
{field} last_name : text
{field} address : text
{field} city : text
{field} telephone : text
}

entity "pets" as pets {
{field} id : int <<PK>>
{field} name : text
{field} birth_date : date
{field} type_id : int <<FK>> not null
{field} owner_id : int <<FK>>
}

entity "roles" as roles {
{field} id : int <<PK>>
{field} username : varchar(20) <<FK>> not null
{field} role : varchar(20) not null
}

entity "specialties" as specialties {
{field} id : int <<PK>>
{field} name : text
{field} description : text
}

entity "types" as types {
{field} id : int <<PK>>
{field} name : text
}

entity "users" as users {
{field} username : varchar(20) <<PK>>
{field} password : varchar(60) not null
{field} enabled : boolean not null
}

entity "vet_specialties" as vet_specialties {
{field} vet_id : int <<FK>> not null
{field} specialty_id : int <<FK>> not null
}

entity "vets" as vets {
{field} id : int <<PK>>
{field} first_name : text
{field} last_name : text
}

entity "visits" as visits {
{field} id : int <<PK>>
{field} pet_id : int <<FK>>
{field} visit_date : date
{field} description : text
{field} visit_time : time
{field} vet_id : int <<FK>>
}


owners ||--o{ pets : owner_id
pets ||--o{ visits : pet_id
specialties ||--o{ vet_specialties : specialty_id
types ||--o{ pets : type_id
users ||--o{ roles : username
vets ||--o{ vet_specialties : vet_id
vets ||--o{ visits : vet_id

@enduml
